--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "cowen_demo",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://salttitan.github.io/cowen_demo",
+  "homepage": "https://salttitan.github.io/cowen_demo/",
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
